@@ -158,6 +158,7 @@
     {-} !sectionins command -> edit slftp.precatcher manually! (#157)
     {-} old language base (slftp.languages)
     {-} Support for older FPC compilers (at least version 3.2.0 needed!)
+    {-} !setoffset no longer required or supported
 
 --=============================( SLFTP v1.5.5 )===================================-
   ** NOTE: FROM NOW ON YOU HAVE TO USE THE MAKEFILE ON LINUX AND THE MAKE.BAT ON WINDOWS **
